tests/negative_tests/modules/aliasingParent.sa
module aliasingParent where
    module M = aliasingParent